--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>M Harley | Portfolio</title>
-    <link rel="icon" type="image/svg+xml" href="./src/assets/logoColor.png">
+    <link rel="icon" type="image/svg+xml" href="/src/assets/logoColor.png">
 
   </head>
   <body>
